orange list imdb undefined

--- a/kp2Imdb.html
+++ b/kp2Imdb.html
@@ -549,7 +549,7 @@
                 <td colspan="4"><a target="_blank" href="${googleImFeelingLuckyUrl}">Google I'm Feeling Lucky</a></td>
               </tr>
               <tr>
-                <td colspan="2"><input type="radio" name="imdb-${movie.id}" value="${imdb.id}" checked> IMDb?</td>
+                <td colspan="2"><input type="radio" name="imdb-${movie.id}" value="google" checked> IMDb?</td>
                 <td colspan="4"><input name="url-${movie.id}"></td>
               </tr>
             `;
